# taptracker

./: .gitignore  README.md  Taptracker.lnk  run_taptracker.bat  setup.cfg
src/taptracker/: __init__.py  __main__.py  _taptracker.py  connections.py  gui.py  params.py  processing.py
src/taptracker/data/: ctk_theme.json
