[metadata]
name = taptracker
version = 0.1.0
description = Track time between keystrokes and some other info
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Walshe
author_email = michael.walshe@katalyzedata.com

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires = 
    pynput
    requests
    pandas
    scipy
    customtkinter

[options.packages.find]
where=src

[options.package_data]
taptracker.data = *.csv, *.txt, *.json, *.png, *.ico

[options.entry_points]
console_scripts = 
    taptracker = taptracker.__main__:main
